force-app/main/default/objects/open_order_summary__x/open_order_summary__x.object-meta.xml
<CustomObject>
    <description>open_order_summary</description>
    <label>open_order_summary</label>
    <pluralLabel>open_order_summary</pluralLabel>
</CustomObject>