force-app/main/default/objects/open_order_summary__x/fields/order_booked_year__c.field-meta.xml
<CustomField>
    <fullName>order_booked_year__c</fullName>
    <description>order_booked_year</description>
    <label>order_booked_year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>