force-app/main/default/objects/open_order_summary__x/fields/quote_nbr__c.field-meta.xml
<CustomField>
    <fullName>quote_nbr__c</fullName>
    <description>quote_nbr</description>
    <label>quote_nbr</label>
    <length>240</length>
    <type>Text</type>
</CustomField>