force-app/main/default/objects/open_order_summary__x/fields/ship_confirm_date__c.field-meta.xml
<CustomField>
    <fullName>ship_confirm_date__c</fullName>
    <description>ship_confirm_date</description>
    <label>ship_confirm_date</label>
    <type>DateTime</type>
</CustomField>